--- a/src/index.html
+++ b/src/index.html
@@ -396,6 +396,40 @@
     <section class="reviews">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__review">
+                <img src="./img/reviews/1.png" alt="first">
+              <div class="reviews__text">
+                <div class="reviews__title">Ирина Иванченко</div>
+                <div class="reviews__subtitle">2 полумарафона</div>
+                <div class="reviews__desc">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.
+                    Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+            </div>
+            <div class="reviews__span"> Новые цели - новый гаджет!</div>
+            <div class="reviews__span">Спасибо, RunSmart!</div>
+            </div>
+          </div>
+          <div class="reviews__review">
+            <img src="./img/reviews/2.png" alt="first">
+          <div class="reviews__text">
+            <div class="reviews__title">Иван Сёмочкин</div>
+            <div class="reviews__subtitle">1 полумарафон</div>
+            <div class="reviews__desc">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. 
+                Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+        </div>
+        <div class="reviews__span">  С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+        </div>
+            </div>
+            <div class="reviews__review">
+                <img src="./img/reviews/3.png" alt="first">
+            <div class="reviews__text">
+                <div class="reviews__title">Юлия Дашкина</div>
+                <div class="reviews__subtitle">2 полумарафона</div>
+                <div class="reviews__desc">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+            </div>
+                <div class="reviews__span"> Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</div>
+                <div class="reviews__span">Спасибо!!!</div>
+            </div>
+          </div>
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
