--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button button">Заказать звонок</button>
+                    <button data-modal="consultation" class="button button">Заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -44,7 +44,7 @@
                         на все вопросы
                     </div>
                 </div>
-                <button class="button button_main">Заказать консультацию</button>
+                <button data-modal="consultation" class="button button_main">Заказать консультацию</button>
                 <div class="promo_link">
                     или
                     <a href="#">Перейти в каталог</a>
@@ -446,6 +446,38 @@
             </div>
         </div>
     </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__desc">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required placeholder="ваше имя" type="text">
+                <input name="phone" required placeholder="ваш телефон" type="number">
+                <input name="email" required placeholder="ваш E-mail" type="email">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>    
+            </form>
+        </div>
+
+        <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__desc">Пульсометр Polar FT1</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required placeholder="ваше имя" type="text">
+                <input name="phone" required placeholder="ваш телефон" type="number">
+                <input name="email" required placeholder="ваш E-mail" type="email">
+                <button class="button button_submit">купить</button>    
+            </form>
+        </div>
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__desc">Наш менеджер свяжется с вами в ближайшее время!</div>
+        </div>
+
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
