--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                         Просто заполните форму заявки <br>
                         и мы перезвоним вам в течении 10 минут
                     </div>
-                    <form class="feed-form" action="#">
+                    <form id="consultation-form" class="feed-form" action="#">
                         <input name="name" required placeholder="ваше имя" type="text">
                         <input name="phone" required placeholder="ваш телефон" type="number">
                         <input name="email" required placeholder="ваш E-mail" type="email">
@@ -465,9 +465,9 @@
             <div class="modal__subtitle">Ваш заказ:</div>
             <div class="modal__desc">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
-                <input name="name" required placeholder="ваше имя" type="text">
-                <input name="phone" required placeholder="ваш телефон" type="number">
-                <input name="email" required placeholder="ваш E-mail" type="email">
+                <input name="name" placeholder="ваше имя" type="text">
+                <input name="phone" placeholder="ваш телефон" type="number">
+                <input name="email" placeholder="ваш E-mail" type="email">
                 <button class="button button_submit">купить</button>    
             </form>
         </div>
@@ -482,6 +482,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/main.min.js"></script>
 </body>
 </html>
